<resources>
    <string name="app_name">要懂匯</string>
    <string name="about_text">@string/app_name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_permission_agree" translatable="false">应用需要您同意以下权限才能正常使用</string>
    <string name="string_permission_setting" translatable="false">您需要去设置中手动开启以下权限</string>
    <string name="string_title_article_content">详情</string>
    <string name="string_title_comment">评论 %1$d</string>
    <string name="string_cancel">取消</string>
    <string name="string_search_broker">请输入公司名称，监管号进行查询</string>
    <string name="string_search_history">浏览历史</string>
    <string name="string_class_title">经哥学堂</string>
    <string name="string_btn_share">分享</string>
    <string name="string_text_focus">关注</string>
    <string name="string_text_focus_s">已关注</string>
    <string name="string_comment_kindly">友善评论</string>
    <string name="string_search_hot">热门搜索</string>
    <string name="string_supervise_rank">监管排行</string>
    <string name="string_brand_rank">品牌排行</string>
    <string name="string_black_rank">黑平台排行</string>
    <string name="string_draw_circle_title">画汇圈</string>
    <string name="string_draw_circle_content">画汇圈详情</string>
    <string name="string_truth_title">真相汇</string>
    <string name="string_truth_content_title">真相汇详情</string>
    <string name="string_score_default">0.00</string>
    <string name="title_activity_broker_content">BrokerContentActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="string_score_total">/10</string>
    <string name="string_text_score">评分</string>
    <string name="string_text_trade_env">交易环境</string>
    <string name="string_text_broker_label">交易软件鉴定</string>
    <string name="string_text_web_set">网站</string>
    <string name="string_text_platform_help">平台援助</string>
    <string name="string_btn_need_help">我要援助</string>
    <string name="string_text_help_cost">保障金额%1$s</string>
    <string name="string_text_supervise_info">监管信息</string>
    <string name="string_text_i_explore">我要曝光</string>
    <string name="string_text_i_comment">我要评论</string>
    <string name="string_explore_type_no_money">无法出金</string>
    <string name="string_explore_type_cheat">诱导诈骗</string>
    <string name="string_explore_type_slip">滑点严重</string>
    <string name="string_explore_type_other">其他曝光</string>
    <string name="string_text_supervise_news_title_pattern">%1$s%2$s</string>
    <string name="string_text_supervise_news_name_time">%1$s  |  %2$s</string>
    <string name="string_text_home">首页</string>
    <string name="string_text_explore_title">曝光详情</string>
    <string name="string_text_report">举报</string>
    <string name="string_text_comment_title">评论详情</string>
    <string name="string_text_comment">评论</string>
    <string name="string_text_broker_comment">评论企业</string>
    <string name="string_text_broker_explore">曝光企业</string>
    <string name="string_text_title">标题</string>
    <string name="string_text_comment_content">评论内容</string>
    <string name="string_text_explore_content">曝光内容</string>
    <string name="string_hint_comment_title">请输入评论标题</string>
    <string name="string_hint_explore_title">请输入曝光标题</string>
    <string name="string_hint_comment_content">请输入要评论的内容</string>
    <string name="string_hint_explore_content">请输入要曝光的内容，可以是聊天记录、平台交易记录、资金出入登记记录等</string>
    <string name="string_post">发布</string>
    <string name="string_upload_pic">上传图片</string>
    <string name="string_explore_type">曝光类型</string>
    <string name="string_share_wechat">微信</string>
    <string name="string_share_circle">朋友圈</string>
    <string name="string_share_save">保存图片</string>
    <string name="string_share_copy">复制链接</string>
    <string name="string_help_info">平台援助保障中心</string>
    <string name="string_money_info">每客索赔标的</string>
    <string name="string_info_Item">每次担保有效期</string>
    <string name="string_help_warn_1">在您向平台申请担保之前，平台必须指出，您所填写的任何信息必须是真实有效的，如发现您所提交的信息存在作假行为，平台有权取消您的担保资格。</string>
    <string name="string_help_warn_2">如该叫以上潜逃，则平台赔偿您的实际损失，且不超过没客户最高赔付额。</string>
    <string name="string_btn_post_free">免费申请</string>
    <string name="string_authentication_title">实名认证</string>
    <string name="text_nationality">国籍</string>
    <string name="string_first_name">姓氏</string>
    <string name="string_last_name">名字</string>
    <string name="string_id_type">证件类型</string>
    <string name="string_id_code">证件号码</string>
    <string name="string_phone_code">手机验证码</string>
    <string name="string_phone_code_get">获取验证码</string>
    <string name="string_hint_first_name">请输入姓氏</string>
    <string name="string_hint_last_name">请输入名字</string>
    <string name="string_hint_id_code">请输入证件号码</string>
    <string name="string_hint_phone_code">请输入手机验证码</string>
    <string name="string_Graphic_code">请输图形验证码</string>
    <string name="string_submit">提交</string>
    <string name="string_phone_code_count_down">%1$ds后重新获取</string>
    <string name="string_help_notification_title">特别提示</string>
    <string name="string_supervise_title">监管机构</string>
    <string name="string_login_text">登录</string>
    <string name="string_register_text">注册</string>
    <string name="string_my_post_text">我的发布</string>
    <string name="string_my_focus_text">我的关注</string>
    <string name="string_watch_history_text">浏览历史</string>
    <string name="string_business_comp_text">商务合作</string>
    <string name="string_push_history_text">推送历史</string>
    <string name="string_language_text">语言</string>
    <string name="string_feedback_text">意见反馈</string>
    <string name="string_about_us_text">关于我们</string>
    <string name="string_language_sc_text">简体中文</string>
    <string name="string_divide"> 丨 </string>
    <string name="string_user_id">ID:%1$s</string>
    <string name="string_login_pwd">   密码登录</string>
    <string name="string_login_phone">验证码登录</string>
    <string name="string_login_no_account">还没有账号？</string>
    <string name="string_login_register">立即注册</string>
    <string name="string_login_contract">我已阅读并同意《用户协议》和《隐私政策》</string>
    <string name="string_phone_input_hint">请输入手机号码</string>
    <string name="string_pwd_input_hint">请输入密码</string>
    <string name="string_pwd_input_again_hint">请再次输入密码</string>
    <string name="string_pwd_forget">忘记密码?</string>
    <string name="string_phone_code_count">%1$ds后重新获取</string>
    <string name="string_register_currently">立即注册</string>
    <string name="string_find_pwd">找回密码</string>
    <string name="string_confirm">确定</string>
    <string name="string_pwd_set_new">设置新密码</string>
    <string name="common_network_error_and_retry_after" translatable="false">网络问题请稍后重试</string>
    <string name="common_network_unavailable" translatable="false">当前网络不可用</string>
    <string name="string_no_data_message">您暂时还没有消息哦</string>
    <string name="string_no_data_search">暂时还没有搜索结果哦</string>
    <string name="string_no_data_network">网络不给力，点击重新加载哦</string>
    <string name="string_no_data_post">您暂时还没发布的内容哦</string>
    <string name="string_no_data_focus">您暂时还没关注的内容哦</string>
    <string name="string_comment_post_success">评论已发布</string>
    <string name="string_my_post_dealer">曝光交易商：%1$s</string>
    <string name="string_supervise_num">监管号：%1$s</string>
    <string name="string_focus_dealer_count">选中%1$d个交易商</string>
    <string name="string_focus_article_count">选中%1$d个资讯</string>
    <string name="string_ad_count">跳过%1$d</string>
    <string name="string_format_message">您关注的交易商%1$s的状态由“%2$s”变更为“%3$s”，请集市查看，避免分享！</string>
    <string name="string_broker_share_title">我在要懂匯查阅了交易商%1$s最新监管信息</string>
    <string name="string_broker_share_content">查监管、辨牌照、定真假，看新闻、听资讯、学经济，尽在要懂匯！</string>
</resources>