<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_50"
        android:padding="@dimen/dp_15"
        android:src="@mipmap/icon_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/dp_65"
        android:layout_height="@dimen/dp_65"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:layout_constraintVertical_bias="0.1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnLoginPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TabTextStyleSelected"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/string_login_pwd"
            android:textSize="@dimen/sp_16"
            app:layout_constraintTop_toTopOf="@+id/tabDivider"
            app:layout_constraintBottom_toBottomOf="@+id/tabDivider"
            app:layout_constraintRight_toLeftOf="@+id/tabDivider"
            android:layout_marginEnd="@dimen/dp_10"/>

        <View
            android:id="@+id/tabDivider"
            android:layout_width="@dimen/dp_1"
            android:layout_height="@dimen/dp_17"
            android:background="@color/color_E6E6E6"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/dp_45"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnLoginPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:textAppearance="@style/TabTextStyleNormal"
            android:text="@string/string_login_phone"
            android:textColor="@color/color_tab_text_999_333"
            android:textSize="@dimen/sp_16"
            app:layout_constraintTop_toTopOf="@+id/tabDivider"
            app:layout_constraintBottom_toBottomOf="@+id/tabDivider"
            app:layout_constraintLeft_toRightOf="@+id/tabDivider"
            android:layout_marginStart="@dimen/dp_10" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginPwd" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@drawable/bg_btn_confirm"
        android:gravity="center"
        android:paddingVertical="@dimen/dp_12"
        android:text="@string/string_login_text"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@+id/vpLogin" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_35"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_login_no_account"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp_14" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_login_register"
            android:textColor="@color/color_9C67E6"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_contract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_25"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/radioContract"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:padding="@dimen/dp_5"
            android:src="@drawable/btn_radio_bg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvContract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="middle"
            android:maxLines="1"
            android:text="@string/string_login_contract"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp_14" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>